--- a/Portfolio/hugo.yml
+++ b/Portfolio/hugo.yml
@@ -1,7 +1,7 @@
 baseURL: "https://examplesite.com/"
 languageCode: fr-fr
 title: Loris Lacerenza
-theme: PaperMod
+theme: ["hugo-video", "PaperMod"]
 
 enableRobotsTXT: true
 buildDrafts: true
@@ -16,23 +16,22 @@ minify:
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  title: ExampleSite
-  description: "ExampleSite description"
-  keywords: [Blog, Portfolio, PaperMod]
-  author: Me
-  # author: ["Me", "You"] # multiple authors
+  title: Loris LACERENZA
+  keywords: [Portfolio, PaperMod]
+  # author: Me
+  # author: ["Me"] # multiple authors
   images: ["<link or path of image for opengraph, twitter-cards>"]
   DateFormat: "2 January 2006"
   defaultTheme: light # dark, light
   disableThemeToggle: false
 
-  ShowReadingTime: true
-  ShowShareButtons: true
+  ShowReadingTime: false
+  ShowShareButtons: false
   ShowPostNavLinks: true
   ShowBreadCrumbs: true
   ShowCodeCopyButtons: false
-  ShowWordCount: true
-  ShowRssButtonInSectionTermList: true
+  ShowWordCount: false
+  ShowRssButtonInSectionTermList: false
   UseHugoToc: true
   disableSpecial1stPost: false
   disableScrollToTop: false
@@ -51,16 +50,11 @@ params:
     apple_touch_icon: "<link / abs url>"
     safari_pinned_tab: "<link / abs url>"
 
-  label:
-    text: "Home"
-    icon: /apple-touch-icon.png
-    iconHeight: 35
-
   # profile-mode
   profileMode:
     enabled: true # needs to be explicitly set
-    title: ExampleSite
-    subtitle: "This is subtitle"
+    title: Loris Lacerenza
+    subtitle: "Salut l'ekip"
     # imageUrl: "<img location>"
     imageWidth: 120
     imageHeight: 120
@@ -95,24 +89,24 @@ menu:
       name: Home
       url: /
       weight: 10
-    # - identifier: blog
-    #   name: Blog
-    #   url: /blog
-    #   weight: 20
+    - identifier: experiences
+      name: Experiences
+      url: /experiences
+      weight: 20
     - identifier: projects
       name: Projects
       url: /projects
-      weight: 20
-    - identifier: experience
-      name: Experience
-      url: /experience
       weight: 30
     - identifier: search
       name: Search
       url: /search
       weight: 40
     - identifier: tags
-      name: tags
+      name: Tags
       url: /tags/
       weight: 50
 
+# markup:
+#   goldmark:
+#     renderer:
+#       unsafe: true
