--- a/hugo.yml
+++ b/hugo.yml
@@ -54,7 +54,7 @@ params:
   profileMode:
     enabled: true # needs to be explicitly set
     title: Loris Lacerenza
-    subtitle: "Développeur de jeux vidéo, Passionné par l’informatique, les sciences, les jeux, vidéo et de société, ainsi que par les nouvelles technologies. J’aime aussi la natation, le théâtre, l’escalade et le milieu de l’audiovisuel. Je cherche un CDI ou un stage de 4 mois, à partir de mai dans le développement vidéoludique, 3D ou XR. 
+    subtitle: "Développeur de jeux vidéo, Passionné par l’informatique, les sciences, les jeux, vidéo et de société, ainsi que par les nouvelles technologies. J’aime aussi la natation, le théâtre, l’escalade et le milieu de l’audiovisuel. Je cherche un CDI ou un stage de minimum 4 mois, à partir de mi-septembre dans le développement vidéoludique, 3D ou XR. 
 "
     imageUrl: "home/formal-pic-small.jpg"
     imageWidth: 120
